vcs/specs/parser/fail/statements/missing_provide_value.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, context, error
// @description: Test provide statement with missing value
// @expected-error: E044

fn test() {
    provide;
}
